[package]
name = "slack-bk"
version = "0.1.0"
authors = ["Frankie Foston <frankie.foston@spire.com>"]
edition = "2018"
license = "MIT"

description = "Slack BlockKit API abstraction for Rust"
repository = "https://github.com/nsat/slack-bk"
readme = "./README.md"

keywords = ["json", "serde", "serialization", "slack", "blockkit"]
categories = ["api-bindings", "data-structures", "web-programming"]


[dependencies]
serde = {version = "1.0", features=["derive"]}

[dev-dependencies]
serde_json = "1.0"
